welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:-9: error: not found: value isFacingTrail
			if (isFacingTrail()) {
                            ^SlugTracking:3: error: not found: value getColorSol
getColorSol() 
^